# pixelwar

./: .gitmodules  server.py
client-bouga/: .gitignore  fetch_pixelwar_image.py  hash_finder.py  proofs.py  troll.py
client-bouga/hash-cracker/: pom.xml
client-bouga/hash-cracker/src/main/java/bouga/h25/: App.java  App2.java  Main.java
client-bouga/hash-cracker/src/test/java/bouga/h25/: AppTest.java
creeper/: creeper.py
egaetan_java/: H25Send_override.java
hackademint/solution_py/: fill4.py
totorigolo-rs/: Cargo.toml
totorigolo-rs/benches/: proof_benchmark.rs
totorigolo-rs/src/: lib.rs  main.rs  proof.rs
